force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Agr_Capacity__c</fullName>
    <label>Capacidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>