force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_PoAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Agr_PoAExpirationDate__c</fullName>
    <label>Procuração Válida até</label>
    <type>Date</type>
</CustomField>