force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_PowerType__c.field-meta.xml
<CustomField>
    <fullName>Agr_PowerType__c</fullName>
    <label>Poderes</label>
    <length>40</length>
    <type>Text</type>
</CustomField>