force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Agr_Qualification__c</fullName>
    <label>Qualificação</label>
    <length>50</length>
    <type>Text</type>
</CustomField>