force-app/main/default/objects/FinServ__AccountAccountRelation__c/fields/Agr_RepresentativeType__c.field-meta.xml
<CustomField>
    <fullName>Agr_RepresentativeType__c</fullName>
    <label>Tipo de representante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>